tests/cases/errors/invalid-variable/duplicate-definition/input.sym
{ $port 3000
, $host localhost
, $port 8080
}
{ :server
  { :port $port
  , :host $host
  }
}
